8256811: Delayed/missed jdwp class unloading events

Reviewed-by: andrew
Backport-of: 54854d9300479c22c416fd9d2fdb5c29fc1884bc